--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
+  <title>文档</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="description" content="Description">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="static/vue.css">
+  <link rel="shortcut icon" href="https://image.uc.cn/s/uae/g/43/uc-open/favicon.ico">
+  <link rel="stylesheet" href="static/css-v1.3.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">加载中</div>
   <script>
     window.$docsify = {
-      //...
-       coverpage: true,
+      coverpage: true,
        loadSidebar: true,
 	   loadNavbar: true,
        name: '学习笔记【首页】',
-       subMaxLevel: 4,
 	   auto2top: true, //当路径改变时，滚到屏幕顶部
-       search: 'auto'
-    
-    }
+       search: 'auto',
+       // 文章深度
+       maxLevel: 1,
+       // 子目录层级
+       subMaxLevel: 2,
+       maxAge: 0, // 过期时间，单位毫秒，默认一天
+       repo: ''
+    } 
   </script>
-  <script src="static/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script> 
   <script src="static/search.js"></script>
   <script src="static/zoom-image.js"></script>
+  <script src="//unpkg.com/docsify-copy-code"></script>
 </body>
 </html>
