--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="static/vue.css">
-  <link rel="shortcut icon" href="https://image.uc.cn/s/uae/g/43/uc-open/favicon.ico">
   <link rel="stylesheet" href="static/css-v1.3.css">
 </head>
 <body>
@@ -33,5 +32,9 @@
   <script src="static/search.js"></script>
   <script src="static/zoom-image.js"></script>
   <script src="//unpkg.com/docsify-copy-code"></script>
+  <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-python.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-scala.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
 </body>
 </html>
