--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       coverpage: true,
        loadSidebar: true,
 	   loadNavbar: true,
-       name: '学习笔记【首页】',
+       name: '学习笔记',
 	   auto2top: true, //当路径改变时，滚到屏幕顶部
        search: 'auto',
        // 文章深度
