--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         host: '//matomo.thunderwave.de',
         id: 6
       },
-      name: 'docsify',
+      name: '学习笔记',
       search: {
         noData: {
           '/de-de/': 'Keine Ergebnisse!',
