--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script>
     window.$docsify = {
       auto2top: true,
+	  autoHeader: false,
       coverpage: true,
       executeScript: true,
       loadSidebar: true,
